# long-to-shorts

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.humeo_work_cathy_investment_20260419/: clip_selection_raw.json  clips.json  clips.meta.json  hooks.json  hooks.meta.json  layout_vision.json  layout_vision.meta.json  prune.json  prune.meta.json  prune_raw.json  source.info.json  transcript.json
.humeo_work_cathy_investment_20260419/subtitles/: clip_001.ass  clip_002.ass  clip_003.ass  clip_004.ass  clip_005.ass  clip_006.ass  clip_007.ass  clip_008.ass
docs/: ENVIRONMENT.md  KNOWN_LIMITATIONS_AND_PROMPT_CONTRACT_GAP.md  PAPER_BREAKDOWN.md  PIPELINE.md  PROJECT_ISSUES.md  README.md  SOLUTIONS.md  STUDY_ORDER.md  TARGET_VIDEO_ANALYSIS.md  TODO.md  full_run_output.txt  hive_architecture_visualization.html  icp.md  mcp_architecture.md  podcast-to-shorts.md
docs/hive-paper/: PAPER_BREAKDOWN.md  hive_paper_blunt_guide.md  prompts_from_paper.md
humeo-core/: .gitignore  LICENSE  README.md  pyproject.toml
humeo-core/docs/: ARCHITECTURE.md  MCP_USAGE.md
humeo-core/examples/: render_request.json
humeo-core/src/humeo_core/: __init__.py  schemas.py  server.py
humeo-core/src/humeo_core/primitives/: classify.py  compile.py  face_detect.py  layouts.py  select_clips.py  vision.py
humeo-core/tests/: test_classify.py  test_compile.py  test_face_detect.py  test_layout_bbox.py  test_layouts.py  test_schemas.py  test_select_clips.py  test_server_tools.py  test_vision.py
humeo-mcp/: README.md  pyproject.toml
humeo-mcp/docs/: ARCHITECTURE.md  MCP_USAGE.md
humeo-mcp/src/humeo_mcp/: __init__.py  cli.py  schemas.py  server.py
humeo-mcp/src/humeo_mcp/primitives/: __init__.py  classify.py  compile.py  face_detect.py  ingest.py  layouts.py
humeo-mcp/tests/: test_classify.py  test_compile.py  test_face_detect.py  test_layout_bbox.py  test_layouts.py  test_schemas.py  test_select_clips.py  test_server_tools.py  test_vision.py
scripts/: verify_render_fixes.py
src/humeo/: __init__.py  audio_pruning.py  cli.py  clip_selection_cache.py  clip_selector.py  config.py  content_pruning.py  cutter.py  env.py  hook_detector.py  ingest.py  layout_vision.py  llm_provider.py  pipeline.py  pipeline_debug.py  prompt_loader.py  reframe_ffmpeg.py  render_window.py  transcript_align.py  video_cache.py
src/humeo/prompts/: clip_selection_system.jinja2  clip_selection_user.jinja2  content_pruning_system.jinja2
tests/: test_audio_pruning.py  test_cli.py  test_clip_selection_cache.py  test_clip_selector.py  test_content_pruning.py  test_hook_detector.py  test_ingest_openai_chunks.py  test_layout_vision_unit.py  test_llm_provider.py  test_pipeline_debug.py  test_prompt_loader.py  test_reframe_ffmpeg.py  test_render_window.py  test_transcript_align.py  test_video_cache.py
