[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "humeo-mcp"
version = "0.1.0"
description = "Reusable-rocket MCP server for long-video-to-shorts editing. Deterministic primitives + 3 fixed 9:16 layouts."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Humeo" }]
keywords = ["mcp", "video", "shorts", "ffmpeg", "editing", "humeo", "hive"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "scenedetect>=0.6",
]

[project.optional-dependencies]
transcribe = ["faster-whisper>=1.0"]
download = ["yt-dlp>=2024.0"]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]

[project.scripts]
humeo-mcp = "humeo_mcp.server:main"
humeo = "humeo_mcp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
